[gd_scene load_steps=6 format=3 uid="uid://j3a7c18fh75e"]

[ext_resource type="PackedScene" uid="uid://ll5oqpyb1htl" path="res://src/ui_elements/screen/screen.tscn" id="1_f1s7h"]
[ext_resource type="Script" uid="uid://b0a4lq4x2jjda" path="res://src/menu_ui/host_menu/host_menu.gd" id="2_gt7fn"]
[ext_resource type="PackedScene" uid="uid://c36lew5uiwsgp" path="res://src/ui_elements/floating_button/Floating_button.tscn" id="3_4ndd0"]
[ext_resource type="PackedScene" uid="uid://dx0us2dbgwv3b" path="res://src/ui_elements/pulse_checkbox/Pulse_checkbox.tscn" id="6_a5t43"]
[ext_resource type="Theme" uid="uid://8b0nu8iueg0s" path="res://assets/resources/themes/theme_ui.tres" id="7_7nsnv"]

[node name="HostMenu" instance=ExtResource("1_f1s7h")]
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2_gt7fn")

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="AskJoin" parent="VBoxContainer" index="0" instance=ExtResource("6_a5t43")]
unique_name_in_owner = true
layout_mode = 2
target_scale = 1.05
label_text = "Entrar no jogo"
is_toggled = true

[node name="Nickname" type="LineEdit" parent="VBoxContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("7_7nsnv")
placeholder_text = "Nickname"
clear_button_enabled = true
caret_blink = true
caret_force_displayed = true

[node name="Host" parent="VBoxContainer" index="2" instance=ExtResource("3_4ndd0")]
layout_mode = 2
text = "Abrir servidor"

[node name="Close" parent="VBoxContainer" index="3" instance=ExtResource("3_4ndd0")]
unique_name_in_owner = true
layout_mode = 2
text = "Fechar servidor"

[node name="Separator4" type="Control" parent="VBoxContainer" index="4"]
layout_mode = 2
size_flags_vertical = 3

[node name="Separator3" type="Control" parent="VBoxContainer" index="5"]
layout_mode = 2
size_flags_vertical = 3

[node name="Back" parent="VBoxContainer" index="6" instance=ExtResource("3_4ndd0")]
layout_mode = 2
text = "Voltar
"

[connection signal="pressed" from="VBoxContainer/AskJoin" to="." method="_on_ask_join_pressed"]
[connection signal="text_changed" from="VBoxContainer/Nickname" to="." method="_on_nickname_text_changed"]
[connection signal="pressed" from="VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBoxContainer/Close" to="." method="close_server"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
